crates/bc-cli/tests/cli/snapshots/cli__asset__depreciate_no_policy_returns_error.snap
---
source: crates/bc-cli/tests/cli/asset.rs
expression: output
---
success: false
exit_code: 1
----- stdout -----
----- stderr -----
error: invalid account kind for record_depreciation: account [ACCOUNT_ID] is DepositAccount
