crates/bc-cli/tests/cli/snapshots/cli__asset__record_valuation_wrong_account_kind_fails.snap
---
source: crates/bc-cli/tests/cli/asset.rs
expression: output
---
success: false
exit_code: 1
----- stdout -----
----- stderr -----
error: invalid account kind for record asset valuation: account [ACCOUNT_ID] is DepositAccount
