crates/bc-cli/tests/cli/snapshots/cli__asset__set_loan_terms_happy_path.snap
---
source: crates/bc-cli/tests/cli/asset.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
{
  "account_id": "[ACCOUNT_ID]",
  "set": true,
  "term_months": 24
}
----- stderr -----
