crates/bc-cli/tests/cli/snapshots/cli__asset__set_loan_terms_wrong_account_kind_fails.snap
---
source: crates/bc-cli/tests/cli/asset.rs
expression: output
---
success: false
exit_code: 1
----- stdout -----
----- stderr -----
error: invalid account kind for set loan terms: account [ACCOUNT_ID] is DepositAccount
